overflow and margin fixes

--- a/whats-smart-filters/src/components/Chat/Chat.css
+++ b/whats-smart-filters/src/components/Chat/Chat.css
@@ -1,8 +1,13 @@
-.empty-icon{
-    font-size: 100px;
+.empty-icon {
+  font-size: 100px;
 }
+.chat {
+  background: var(--bg2);
+  width: 744px;
+}
+
 .chat-container {
-    background: var(--bg2);
-    width: 744px;
-  }
-  
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
